# klawtrade

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
config/: settings.yaml
src/: __main__.py  cli.py  config.py  main.py
src/backtesting/: __init__.py
src/dashboard/: app.py
src/dashboard/templates/: index.html
src/execution/: __init__.py  alpaca_broker.py  broker.py  order_manager.py  sim_broker.py
src/market_data/: aggregator.py  provider.py  simulated_data.py  technical.py
src/portfolio/: state.py
src/risk/: circuit_breaker.py  limits.py  manager.py  position_sizer.py
src/storage/: database.py  models.py
src/strategy/: engine.py  signals.py
src/strategy/rules/: mean_reversion.py  momentum.py
src/utils/: logging.py  time_utils.py
tests/: test_circuit_breaker.py  test_position_sizer.py  test_risk_manager.py
